--- a/.env
+++ b/.env
@@ -3,14 +3,14 @@ UUID=
 WSPATH=
 
 # 哪吒三个参数，不需要的话可以留空，删除或在这三行最前面加 # 以注释
-NEZHA_SERVER=
-NEZHA_PORT=
-NEZHA_KEY=
-NEZHA_TLS=
+NEZHA_SERVER=data.ciopk.eu.org
+NEZHA_PORT=443
+NEZHA_KEY=EKnTibTYcJN82B8XWW
+NEZHA_TLS=1
 
 # Argo 固定域名隧道的两个参数,这个可以填 Json 内容或 Token 内容，获取方式看 https://github.com/fscarmen2/X-for-Glitch，不需要的话可以留空，删除或在这三行最前面加 # 以注释
-ARGO_AUTH=''
-ARGO_DOMAIN=
+ARGO_AUTH='vioo.seno.eu.org'
+ARGO_DOMAIN={"AccountTag":"e8e821c280bb5eb41dd38e04d456baf6","TunnelSecret":"XxY3FwV/EE4bhGy8O6SDraq94wFH/j/Qw9sVqp3Tfk0=","TunnelID":"105f8137-9ac5-4335-b8b2-db01f04b8678"}
 
 # ttyd argo 域名
 SSH_DOMAIN=
